update project structure

--- a/Producto/pom.xml
+++ b/Producto/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>org.example</groupId>
-    <artifactId>Producto</artifactId>
+    <artifactId>product</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>Producto</name>
-    <description>Producto</description>
+    <name>product</name>
+    <description>product</description>
     <url/>
     <licenses>
         <license/>
